Fix for inline-block spacing issue
Added some additional styling

--- a/Sass/partials/buttons/_buttons.scss
+++ b/Sass/partials/buttons/_buttons.scss
@@ -176,7 +176,11 @@ $Placeholder-Selectors: ();
 		@else {
 
 		display: inline-block;
+		vertical-align: top;
 		text-decoration: none;
+		margin-right: -0.25em; /* Adjusts for spacing problem with inline-blocks */
+		*zoom: 1; /* trigger hasLayout for IE7 and below */
+  		*display: inline; /* the star targets only IE7 and below */
 		
 		&:hover {
 			cursor: pointer;
